--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "framer-motion": "^12.23.12",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.540.0",
     "papaparse": "^5.5.3",
